--- a/TodoApp/src/main/resources/static/webapp/resources/styles/style.css
+++ b/TodoApp/src/main/resources/static/webapp/resources/styles/style.css
@@ -20,3 +20,23 @@
 	background-color: #333;
 	opacity: .3;
 }
+
+.text-red {
+	color: #ff0000;
+}
+
+.padding-1em {
+	padding: 1em;
+}
+
+.text-center {
+	text-align: center;
+}
+
+.border-solid-red {
+	border: 1px solid #ff0000;
+}
+
+.back-dirt-white {
+	background-color: #f5f5f5;
+}
