--- a/TodoApp/src/main/resources/static/webapp/resources/styles/style.css
+++ b/TodoApp/src/main/resources/static/webapp/resources/styles/style.css
@@ -40,3 +40,22 @@
 .back-dirt-white {
 	background-color: #f5f5f5;
 }
+
+.parsley-errors-list {
+	color: #ff0000;
+	list-style: none;
+	padding-left: 0.2em;
+	font-size: 12px;
+}
+
+.no-padding-left {
+	padding-left: 0;
+}
+
+.no-padding-right {
+	padding-right: 0;
+}
+
+.padding-left-02em {
+	padding-left: 0.2em;
+}
