--- a/TodoApp/src/main/resources/static/webapp/resources/styles/style.css
+++ b/TodoApp/src/main/resources/static/webapp/resources/styles/style.css
@@ -2,24 +2,43 @@
 	overflow: auto
 }
 
-.ajax-loader {
-	position: absolute;
-	left: 50%;
-	top: 40%;
-	display: block;
-	width: 7%;
-}
-
 .spinner {
 	position: fixed;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100%;
-	z-index: 1000;
+	z-index: 9999;
 	background-color: #333;
-	opacity: .3;
+	opacity: .8;
 }
+
+.width-height-per100 {
+   width: 100%;
+   height: 100%;
+}
+
+.rotate360-5s {
+	-webkit-animation: rotate360 5s linear infinite;
+    -moz-animation: rotate360 5s linear infinite;
+    animation: rotate360 5s linear infinite;
+}
+
+.div-center-screen-size-100-100 {
+	display: inline-block;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100px;
+    height: 100px;
+    margin: auto;
+}
+
+@-moz-keyframes rotate360 { 100% { -moz-transform: rotate(360deg); } }
+@-webkit-keyframes rotate360 { 100% { -webkit-transform: rotate(360deg); } }
+@keyframes rotate360 { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
 
 .text-red {
 	color: #ff0000;
