--- a/TodoApp/src/main/resources/static/webapp/common/resources/styles/style.css
+++ b/TodoApp/src/main/resources/static/webapp/common/resources/styles/style.css
@@ -1,3 +1,7 @@
+html,body {
+	height: 100%;
+}
+
 .overflow-auto {
 	overflow: auto
 }
@@ -14,34 +18,57 @@
 }
 
 .width-height-per100 {
-   width: 100%;
-   height: 100%;
+	width: 100%;
+	height: 100%;
+}
+
+.width-full {
+	width: 100%;
 }
 
 .rotate360-5s {
 	-webkit-animation: rotate360 5s linear infinite;
-    -moz-animation: rotate360 5s linear infinite;
-    animation: rotate360 5s linear infinite;
+	-moz-animation: rotate360 5s linear infinite;
+	animation: rotate360 5s linear infinite;
 }
 
 .div-center-screen-size-100-100 {
 	display: inline-block;
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    width: 100px;
-    height: 100px;
-    margin: auto;
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	width: 100px;
+	height: 100px;
+	margin: auto;
 }
 
-@-moz-keyframes rotate360 { 100% { -moz-transform: rotate(360deg); } }
-@-webkit-keyframes rotate360 { 100% { -webkit-transform: rotate(360deg); } }
-@keyframes rotate360 { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
+@
+-moz-keyframes rotate360 { 100% {
+	-moz-transform: rotate(360deg);
+}
 
+}
+@
+-webkit-keyframes rotate360 { 100% {
+	-webkit-transform: rotate(360deg);
+}
+
+}
+@
+keyframes rotate360 { 100% {
+	-webkit-transform: rotate(360deg);
+	transform: rotate(360deg);
+}
+
+}
 .text-red {
 	color: #ff0000;
+}
+
+.text-gray {
+	color: #586069;
 }
 
 .padding-1em {
@@ -77,4 +104,84 @@
 
 .padding-left-02em {
 	padding-left: 0.2em;
+}
+
+.logo-emc2 {
+	content: url('../images/Emc2_logo.png');
+}
+
+.logo-todo-30px {
+	content: url('../images/todo_logo_30px.png');
+}
+
+.text-normal {
+	font-weight: 400 !important
+}
+
+.text-bold {
+	font-weight: 600 !important
+}
+
+.text-italic {
+	font-style: italic !important
+}
+
+.text-uppercase {
+	text-transform: uppercase !important
+}
+
+.no-underline {
+	text-decoration: none !important
+}
+
+.no-wrap {
+	white-space: nowrap !important
+}
+
+.form-signin {
+	width: 100%;
+	max-width: 330px;
+	padding: 15px;
+	margin: 0 auto;
+}
+
+a {
+	color: #0366d6;
+	text-decoration: none;
+}
+
+a:hover {
+	text-decoration: none;
+}
+
+.font10 {
+	font-size: 10px;
+}
+
+.font11 {
+	font-size: 11px;
+}
+
+.font12 {
+	font-size: 12px;
+}
+
+.font13 {
+	font-size: 13px;
+}
+
+.font14 {
+	font-size: 14px;
+}
+
+.font15 {
+	font-size: 15px;
+}
+
+.font16 {
+	font-size: 16px;
+}
+
+.margin-top-min10px {
+	margin-top: -10px;
 }
