Sign up styling in home page

--- a/TodoApp/src/main/resources/static/webapp/common/resources/styles/style.css
+++ b/TodoApp/src/main/resources/static/webapp/common/resources/styles/style.css
@@ -262,6 +262,10 @@ a:hover {
 	border-radius: 3px !important;
 }
 
+.rounded-2 {
+	border-radius: 9px !important;
+}
+
 .bg-gray-light {
 	background-color: #fafbfc !important;
 }
