--- a/TodoApp/src/main/webapp/common/resources/styles/style.css
+++ b/TodoApp/src/main/webapp/common/resources/styles/style.css
@@ -461,8 +461,21 @@ a.dropdown-item:active {
     box-shadow: 0 1px 3px rgba(27,31,35,0.05);
 }
 
-.steps li:first-child {
-    border-left: 0;
+.steps li {
+    color: #c6cbd1;
+    cursor: default;
+    background-color: #fafbfc;
+    border-bottom: 1px solid #dfe2e5;
+}
+
+@media (min-width: 576px) {
+	.steps li {
+	    border-left: 1px solid #dfe2e5;
+	}
+	
+	.steps li:first-child {
+    	border-left: 0;
+	}
 }
 
 .steps li.current {
@@ -470,9 +483,6 @@ a.dropdown-item:active {
     background-color: #fff;
 }
 
-.steps li {
-    color: #c6cbd1;
-    cursor: default;
-    background-color: #fafbfc;
-    border-left: 1px solid #dfe2e5;
+.steps li.current i {
+    color: #0366d6;
 }
