password reset - part1 (front-end implementation)

--- a/TodoApp/src/main/webapp/customer/pages/root/sign-in/sign-in.css
+++ b/TodoApp/src/main/webapp/customer/pages/root/sign-in/sign-in.css
@@ -74,6 +74,10 @@
 	min-width: 18rem;
 }
 
+.min-width-19rem {
+	min-width: 19rem;
+}
+
 .create-account-callout {
     padding: 15px 20px;
     text-align: center;
